fixing multiplayer